--- a/backend/package.json
+++ b/backend/package.json
@@ -1,26 +1,22 @@
 {
-  "name": "friends-bills-backend",
-  "version": "1.0.0",
-  "private": true,
+  "name": "fairshare-backend",
+  "version": "2.0.0",
   "type": "module",
   "main": "src/index.js",
   "scripts": {
-    "dev": "nodemon src/index.js",
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "dependencies": {
-    "@sendgrid/mail": "^8.1.5",
-    "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.0",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.3.1",
-    "openai": "^4.52.0"
+    "mongoose": "^8.5.1",
+    "openai": "^4.55.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.2"
   }
 }
